# cs225-filefuse

./: .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix  fuse.c  fuse.h  volper-project.json  volpy
.cache/clangd/index/: driver.c.D185FCC98E08465E.idx  driver.cpp.DC26157EBE9C9B56.idx  fuse.c.D28EDEDACA09E217.idx  fuse.h.87F9D62BAA1B5884.idx
